--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
   <title>Socket.IO p5 Multi-Player</title>
   <script src="/socket.io/socket.io.js"></script>
   <script src="p5.js"></script>
-  <script src="sender.js"></script>
+  <script src="sketch.js"></script>
+  
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
