--- a/public/sender.html
+++ b/public/sender.html
@@ -21,8 +21,8 @@
     </div>
     <div id="login" class="page">
       <div id="login-form">
-        <h3 class="title">What's your nickname?</h3>
-        <!-- <input class="usernameInput" type="text" maxlength="14" /> -->
+        <h3 class="title">REGISTER CODENAME</h3>
+        <input class="usernameInput" type="text" maxlength="14" />
       </div> 
     </div>
   </main>
