🦁🌠 Checkpoint ./public/sender.html:55706575/117 ./public/sender.js:55706575/373

--- a/public/sender.html
+++ b/public/sender.html
@@ -12,13 +12,13 @@
 <body>
   <main>
      <div id="sketch-container" class="page hide">
-<!--       <div id="gui-container" class="chatArea"> -->
-<!--         <div class="message-scroll"> -->
-<!--           <div class="messages"></div> -->
-<!--         </div> -->
-<!--         <input class="inputMessage" placeholder="Type here..."/> -->
-<!--       </div> -->
-<!--     </div> -->
+      <div id="gui-container" class="chatArea">
+        <div class="message-scroll">
+          <div class="messages"></div>
+        </div>
+        <input class="inputMessage" placeholder="Type here..."/>
+      </div>
+    </div>
     <div id="login" class="page">
       <div id="login-form">
         <h3 class="title">REGISTER CODENAME</h3>
